--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -28,8 +26,10 @@ services:
       - DB_PASSWORD=postgres
       - DB_NAME=task_scheduler
       - DB_PORT=5432
+      - DB_SSLMODE=disable
       - PORT=8080
       - GIN_MODE=release
+      - LOG_DIR=/var/log/task-scheduler
     ports:
       - "8080:8080"
     depends_on:
@@ -43,6 +43,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
 
 volumes:
   postgres_data:
